--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^10.0.4",
-    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@react-three/fiber": "^9.1.0",
     "@shadcn/ui": "^0.0.4",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.79",
     "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.31.0",
     "@tsparticles/react": "^3.0.0",
@@ -40,6 +42,7 @@
     "react-icons": "^5.5.0",
     "react-spring": "^9.7.5",
     "react-use": "^17.6.0",
+    "react-wrap-balancer": "^1.1.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^0.3.1",
