--- a/package.json
+++ b/package.json
@@ -1,76 +1,78 @@
 {
-  "name": "my-next-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^2.10.7",
-    "@chakra-ui/theme-tools": "^2.2.6",
-    "@emotion/react": "^11.14.0",
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
-    "@number-flow/react": "^0.5.8",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@react-spring/web": "^9.7.5",
-    "@react-three/drei": "^10.0.4",
-    "@react-three/fiber": "^9.1.0",
-    "@saas-ui/react": "^2.11.4",
-    "@shadcn/ui": "^0.0.4",
-    "@splinetool/react-spline": "^4.0.0",
-    "@splinetool/runtime": "^1.9.79",
-    "@studio-freight/lenis": "^1.0.42",
-    "@tabler/icons-react": "^3.31.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.8.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cobe": "^0.6.3",
-    "framer-motion": "^12.5.0",
-    "lenis": "^1.2.0",
-    "lucide-react": "^0.477.0",
-    "motion": "^12.5.0",
-    "next": "15.2.0",
-    "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0",
-    "react-spring": "^9.7.5",
-    "react-use": "^17.6.0",
-    "react-wrap-balancer": "^1.1.1",
-    "simplex-noise": "^4.0.3",
-    "tailwind-merge": "^3.0.2",
-    "tailwind-variants": "^0.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.174.0",
-    "three-globe": "^2.42.2"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.13",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14",
-    "typescript": "^5"
-  },
-  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
-  "main": "tailwind.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "my-next-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "start": "next start",
+        "dev": "next dev"
+    },
+
+    "dependencies": {
+        "@chakra-ui/react": "^2.10.7",
+        "@chakra-ui/theme-tools": "^2.2.6",
+        "@emotion/react": "^11.14.0",
+        "@headlessui/react": "^2.2.0",
+        "@heroicons/react": "^2.2.0",
+        "@number-flow/react": "^0.5.8",
+        "@radix-ui/react-accordion": "^1.2.3",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-navigation-menu": "^1.2.5",
+        "@radix-ui/react-slot": "^1.1.2",
+        "@react-spring/web": "^9.7.5",
+        "@react-three/drei": "^10.0.4",
+        "@react-three/fiber": "^9.1.0",
+        "@saas-ui/react": "^2.11.4",
+        "@shadcn/ui": "^0.0.4",
+        "@splinetool/react-spline": "^4.0.0",
+        "@splinetool/runtime": "^1.9.79",
+        "@studio-freight/lenis": "^1.0.42",
+        "@tabler/icons-react": "^3.31.0",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.8.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cobe": "^0.6.3",
+        "framer-motion": "^12.5.0",
+        "lenis": "^1.2.0",
+        "lucide-react": "^0.477.0",
+        "motion": "^12.5.0",
+        "next": "15.2.0",
+        "next-themes": "^0.4.6",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-fast-marquee": "^1.6.5",
+        "react-icons": "^5.5.0",
+        "react-spring": "^9.7.5",
+        "react-use": "^17.6.0",
+        "react-wrap-balancer": "^1.1.1",
+        "simplex-noise": "^4.0.3",
+        "tailwind-merge": "^3.0.2",
+        "tailwind-variants": "^0.3.1",
+        "tailwindcss-animate": "^1.0.7",
+        "three": "^0.174.0",
+        "three-globe": "^2.42.2"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4.0.13",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@typescript-eslint/eslint-plugin": "^8.29.0",
+        "@typescript-eslint/parser": "^8.29.0",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.24.0",
+        "eslint-config-next": "15.2.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.0.14",
+        "typescript": "^5"
+    },
+    "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+    "main": "tailwind.config.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
