--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "scripts": {
         "build": "next build",
         "start": "next start",
+        "export": "next export",
         "dev": "next dev"
     },
-
     "dependencies": {
         "@chakra-ui/react": "^2.10.7",
         "@chakra-ui/theme-tools": "^2.2.6",
@@ -64,8 +64,8 @@
         "@typescript-eslint/eslint-plugin": "^8.29.0",
         "@typescript-eslint/parser": "^8.29.0",
         "autoprefixer": "^10.4.21",
-        "eslint": "^9.24.0",
-        "eslint-config-next": "15.2.0",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "^13.5.11",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.0.14",
         "typescript": "^5"
