--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "build": "next build",
         "start": "next start",
         "export": "next export",
-        "dev": "next dev"
+        "dev": "next dev",
+        "lint": "next lint"
     },
     "dependencies": {
         "@chakra-ui/react": "^2.10.7",
@@ -49,6 +50,7 @@
         "react-use": "^17.6.0",
         "react-wrap-balancer": "^1.1.1",
         "simplex-noise": "^4.0.3",
+        "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.2",
         "tailwind-variants": "^0.3.1",
         "tailwindcss-animate": "^1.0.7",
@@ -56,16 +58,11 @@
         "three-globe": "^2.42.2"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4.0.13",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "@typescript-eslint/parser": "^8.29.0",
         "autoprefixer": "^10.4.21",
-        "eslint": "^8.57.1",
-        "eslint-config-next": "^13.5.11",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.0.14",
         "typescript": "^5"
