--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "private": true,
     "scripts": {
         "build": "next build",
+        "dev": "next dev",
         "start": "next start",
         "export": "next export",
-        "dev": "next dev",
         "lint": "next lint"
     },
     "dependencies": {
@@ -39,7 +39,7 @@
         "framer-motion": "^12.5.0",
         "lenis": "^1.2.0",
         "lucide-react": "^0.477.0",
-        "motion": "^12.5.0",
+        "motion": "^12.11.0",
         "next": "15.2.0",
         "next-themes": "^0.4.6",
         "react": "^18.3.1",
@@ -51,7 +51,8 @@
         "react-wrap-balancer": "^1.1.1",
         "simplex-noise": "^4.0.3",
         "sonner": "^2.0.3",
-        "tailwind-merge": "^3.0.2",
+        "swiper": "^11.2.6",
+        "tailwind-merge": "^3.3.0",
         "tailwind-variants": "^0.3.1",
         "tailwindcss-animate": "^1.0.7",
         "three": "^0.174.0",
