--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/components/B-components/LANDING/home.tsx"
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/dist", "**/*.test.ts", "**/*.test.tsx"]
 }
