--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "dependencies": {
         "@chakra-ui/react": "^2.10.7",
         "@chakra-ui/theme-tools": "^2.2.6",
+        "@emailjs/browser": "^4.4.1",
         "@emotion/react": "^11.14.0",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.2.0",
         "@number-flow/react": "^0.5.8",
@@ -36,6 +40,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cobe": "^0.6.3",
+        "emailjs-com": "^3.2.0",
         "framer-motion": "^12.5.0",
         "lenis": "^1.2.0",
         "lucide-react": "^0.477.0",
